[gd_scene load_steps=27 format=3 uid="uid://314n5nllo05g"]

[ext_resource type="Script" path="res://scripts/System.gd" id="1_sydhc"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="2_ralj5"]
[ext_resource type="Texture2D" uid="uid://cptchtqkpb1ec" path="res://graphics/square.svg" id="3_s8itg"]
[ext_resource type="Texture2D" uid="uid://3fxa7kaj8x30" path="res://graphics/buttonBackground.svg" id="4_wxfas"]
[ext_resource type="Script" path="res://scripts/menuButton.gd" id="5_t2n50"]
[ext_resource type="Texture2D" uid="uid://c28iptu6bk0yf" path="res://graphics/barBackground.svg" id="6_y15n5"]
[ext_resource type="Script" path="res://scripts/DevelopmentalMenu.gd" id="7_hq5gp"]
[ext_resource type="PackedScene" uid="uid://bq5otdbmv8pv3" path="res://resources/ListItemObject.tscn" id="7_kei8b"]
[ext_resource type="Resource" uid="uid://0j4jcw5b6bxk" path="res://resources/LineItem.tres" id="8_4hell"]
[ext_resource type="Script" path="res://scripts/TopMenu.gd" id="8_kujdy"]
[ext_resource type="Script" path="res://scripts/line.gd" id="9_27ae3"]

[sub_resource type="LabelSettings" id="LabelSettings_7ikwi"]
font_size = 34
outline_size = 4
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6jmrr"]
content_margin_top = 14.0

[sub_resource type="Theme" id="Theme_yqvkt"]
default_font_size = 15

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kvegt"]

[sub_resource type="LabelSettings" id="LabelSettings_g7sf1"]
font_size = 38
font_color = Color(0.501961, 0.780392, 0.207843, 1)

[sub_resource type="Gradient" id="Gradient_3v83c"]
offsets = PackedFloat32Array(0, 0.503067, 1)
colors = PackedColorArray(0.584314, 0.901961, 0.243137, 1, 0.501961, 0.780392, 0.207843, 1, 0.584314, 0.901961, 0.243137, 1)

[sub_resource type="Gradient" id="Gradient_15r2b"]
offsets = PackedFloat32Array(0, 0.496689, 1)
colors = PackedColorArray(0.584314, 0.901961, 0.243137, 1, 0.49675, 0.770308, 0.203561, 1, 0.584314, 0.901961, 0.243137, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1gwfn"]
font_size = 21

[sub_resource type="LabelSettings" id="LabelSettings_8yfeg"]
font_size = 21

[sub_resource type="Gradient" id="Gradient_hhys4"]
colors = PackedColorArray(0.388235, 0.72549, 1, 1, 0.735744, 0.875733, 1, 1)

[sub_resource type="Animation" id="Animation_bo0mj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:gradient")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("Gradient_hhys4")]
}

[sub_resource type="Animation" id="Animation_t7xdo"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:gradient")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ey7s3"]
_data = {
"RESET": SubResource("Animation_bo0mj"),
"idle": SubResource("Animation_t7xdo")
}

[sub_resource type="SystemFont" id="SystemFont_cjhsi"]

[sub_resource type="LabelSettings" id="LabelSettings_0g8g5"]
font = SubResource("SystemFont_cjhsi")
font_size = 35
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="MainScene" type="Node2D"]
script = ExtResource("1_sydhc")

[node name="MainMenu" type="ColorRect" parent="."]
offset_right = 541.0
offset_bottom = 963.0
color = Color(0.901961, 0.945098, 0.988235, 1)
script = ExtResource("2_ralj5")

[node name="BackgroundDecoration" type="Node2D" parent="MainMenu"]
z_index = 1

[node name="Square" type="Sprite2D" parent="MainMenu/BackgroundDecoration"]
self_modulate = Color(0.731609, 0.850492, 0.967576, 1)
z_index = -1
position = Vector2(84, 204)
rotation = 0.785398
texture = ExtResource("3_s8itg")

[node name="Square2" type="Sprite2D" parent="MainMenu/BackgroundDecoration"]
self_modulate = Color(0.731609, 0.850492, 0.967576, 1)
z_index = -1
position = Vector2(460, 509)
rotation = 0.785398
texture = ExtResource("3_s8itg")

[node name="Square3" type="Sprite2D" parent="MainMenu/BackgroundDecoration"]
self_modulate = Color(0.731609, 0.850492, 0.967576, 1)
z_index = -1
position = Vector2(115, 752)
rotation = 0.785398
texture = ExtResource("3_s8itg")

[node name="Square4" type="Sprite2D" parent="MainMenu/BackgroundDecoration"]
self_modulate = Color(0.731609, 0.850492, 0.967576, 1)
z_index = -1
position = Vector2(487, 1020)
rotation = 0.785398
texture = ExtResource("3_s8itg")

[node name="StartMenu" type="Node2D" parent="MainMenu"]

[node name="DevelopmentalButton" type="Sprite2D" parent="MainMenu/StartMenu"]
self_modulate = Color(0.682353, 0.980392, 0.407843, 1)
z_index = 2
z_as_relative = false
position = Vector2(272, 365)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_wxfas")
script = ExtResource("5_t2n50")

[node name="Shadow" type="Sprite2D" parent="MainMenu/StartMenu/DevelopmentalButton"]
self_modulate = Color(0.538639, 0.836365, 0.219294, 1)
z_index = 1
z_as_relative = false
texture = ExtResource("4_wxfas")
offset = Vector2(5, 5)

[node name="Label" type="Label" parent="MainMenu/StartMenu/DevelopmentalButton"]
offset_left = -128.667
offset_top = -118.667
offset_right = 122.333
offset_bottom = -68.6667
text = "Developmental"
label_settings = SubResource("LabelSettings_7ikwi")
horizontal_alignment = 1

[node name="TouchScreenButton" type="TouchScreenButton" parent="MainMenu/StartMenu/DevelopmentalButton"]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(-145.333, -127.333)
scale = Vector2(0.371956, 0.0676759)
texture_normal = ExtResource("6_y15n5")

[node name="RegressiveButton" type="Sprite2D" parent="MainMenu/StartMenu"]
self_modulate = Color(0.984314, 0.243137, 0, 1)
z_index = 2
z_as_relative = false
position = Vector2(270, 537)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_wxfas")

[node name="Shadow" type="Sprite2D" parent="MainMenu/StartMenu/RegressiveButton"]
self_modulate = Color(0.743919, 0.174178, 0, 1)
z_index = 1
z_as_relative = false
texture = ExtResource("4_wxfas")
offset = Vector2(5, 5)

[node name="Label" type="Label" parent="MainMenu/StartMenu/RegressiveButton"]
offset_left = -89.3333
offset_top = -118.0
offset_right = 87.6667
offset_bottom = -68.0
text = "Regressive"
label_settings = SubResource("LabelSettings_7ikwi")

[node name="RewardButton" type="Sprite2D" parent="MainMenu/StartMenu"]
self_modulate = Color(0.0666667, 1, 1, 1)
z_index = 2
z_as_relative = false
position = Vector2(272, 703)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_wxfas")

[node name="Shadow" type="Sprite2D" parent="MainMenu/StartMenu/RewardButton"]
self_modulate = Color(0, 0.909804, 0.909804, 1)
z_index = 1
z_as_relative = false
texture = ExtResource("4_wxfas")
offset = Vector2(5, 5)

[node name="Label" type="Label" parent="MainMenu/StartMenu/RewardButton"]
offset_left = -132.667
offset_top = -116.0
offset_right = 118.333
offset_bottom = -66.0
text = "Rewards"
label_settings = SubResource("LabelSettings_7ikwi")
horizontal_alignment = 1

[node name="StatsButton" type="Sprite2D" parent="MainMenu/StartMenu"]
self_modulate = Color(0.866667, 0.882353, 0.886275, 1)
z_index = 2
z_as_relative = false
position = Vector2(272, 869)
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_wxfas")

[node name="Shadow" type="Sprite2D" parent="MainMenu/StartMenu/StatsButton"]
self_modulate = Color(0.661346, 0.694725, 0.703056, 1)
z_index = 1
z_as_relative = false
texture = ExtResource("4_wxfas")
offset = Vector2(5, 5)

[node name="Label" type="Label" parent="MainMenu/StartMenu/StatsButton"]
offset_left = -132.667
offset_top = -116.0
offset_right = 118.333
offset_bottom = -66.0
text = "Statistics"
label_settings = SubResource("LabelSettings_7ikwi")
horizontal_alignment = 1

[node name="DevelopmentalMenu" type="Node2D" parent="MainMenu"]
visible = false
script = ExtResource("7_hq5gp")
listOfItems = [ExtResource("8_4hell")]

[node name="ScrollContainer" type="ScrollContainer" parent="MainMenu/DevelopmentalMenu"]
z_index = 5
offset_left = 21.0
offset_top = 121.0
offset_right = 522.0
offset_bottom = 840.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_6jmrr")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/DevelopmentalMenu/ScrollContainer" node_paths=PackedStringArray("shortcut_context")]
custom_minimum_size = Vector2(500, 700)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_context = NodePath("")
theme = SubResource("Theme_yqvkt")
theme_override_constants/separation = 175

[node name="ListItemDevelopmental" parent="MainMenu/DevelopmentalMenu/ScrollContainer/VBoxContainer" instance=ExtResource("7_kei8b")]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MainMenu/DevelopmentalMenu"]
visible = false
self_modulate = Color(1, 1, 1, 0.537255)
offset_top = 811.0
offset_right = 540.0
offset_bottom = 961.0
color = Color(0.682353, 0.980392, 0.407843, 1)

[node name="ButtonBackgroundSmall(6)" type="Sprite2D" parent="MainMenu/DevelopmentalMenu/ColorRect"]
visible = false
self_modulate = Color(0.964706, 0.964706, 0.964706, 1)
texture_filter = 1
position = Vector2(274.75, 56.75)
scale = Vector2(0.5, 0.5)
texture = SubResource("CompressedTexture2D_kvegt")

[node name="Label" type="Label" parent="MainMenu/DevelopmentalMenu/ColorRect"]
layout_mode = 0
offset_left = 216.0
offset_top = 86.0
offset_right = 297.0
offset_bottom = 142.0
text = "ADD"
label_settings = SubResource("LabelSettings_g7sf1")

[node name="Label2" type="Label" parent="MainMenu/DevelopmentalMenu/ColorRect"]
layout_mode = 0
offset_left = 57.0
offset_top = 46.0
offset_right = 127.0
offset_bottom = 102.0
text = "Exit"
label_settings = SubResource("LabelSettings_g7sf1")

[node name="Label3" type="Label" parent="MainMenu/DevelopmentalMenu/ColorRect"]
layout_mode = 0
offset_left = 370.0
offset_top = 50.0
offset_right = 497.0
offset_bottom = 106.0
text = "Modify"
label_settings = SubResource("LabelSettings_g7sf1")

[node name="Line2D" type="Line2D" parent="MainMenu/DevelopmentalMenu/ColorRect"]
position = Vector2(256.05, 56.65)
scale = Vector2(0.45, 0.45)
points = PackedVector2Array(-6, 59, -6, 0.181229, -6, -57)
width = 20.0
default_color = Color(0.584314, 0.901961, 0.243137, 1)
gradient = SubResource("Gradient_3v83c")
begin_cap_mode = 2
end_cap_mode = 2

[node name="Line2D2" type="Line2D" parent="MainMenu/DevelopmentalMenu/ColorRect"]
position = Vector2(255.55, 59.15)
rotation = 1.5708
scale = Vector2(0.45, 0.45)
points = PackedVector2Array(-6, 59, -6, 4.9244, -6, -57)
width = 20.0
default_color = Color(0.458824, 0.929412, 0, 1)
gradient = SubResource("Gradient_15r2b")
begin_cap_mode = 2
end_cap_mode = 2

[node name="TopMenu" type="ColorRect" parent="."]
offset_left = -1.0
offset_right = 541.0
offset_bottom = 94.0
color = Color(0, 0.517647, 0.815686, 1)
script = ExtResource("8_kujdy")

[node name="RewardPoints" type="Label" parent="TopMenu"]
layout_mode = 0
offset_left = 341.0
offset_top = 59.0
offset_right = 543.0
offset_bottom = 97.0
text = "Reward Points: 7"
label_settings = SubResource("LabelSettings_1gwfn")
vertical_alignment = 1

[node name="Rank" type="Label" parent="TopMenu"]
layout_mode = 0
offset_left = 25.0
offset_top = 61.0
offset_right = 86.0
offset_bottom = 94.0
text = "Rank: Sleeper"
label_settings = SubResource("LabelSettings_8yfeg")

[node name="Bar" type="Sprite2D" parent="TopMenu"]
self_modulate = Color(0, 0.432535, 0.686277, 1)
position = Vector2(265, 6.00001)
scale = Vector2(0.7, 0.7)
texture = ExtResource("6_y15n5")

[node name="Line2D" type="Line2D" parent="TopMenu/Bar"]
position = Vector2(0, -1.42857)
points = PackedVector2Array(-250, 41.4286, -208.571, 41.4286)
width = 50.0
default_color = Color(0.38762, 0.726839, 1, 1)
gradient = SubResource("Gradient_hhys4")
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("9_27ae3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="TopMenu/Bar/Line2D"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_ey7s3")
}

[node name="Points" type="Label" parent="TopMenu/Bar"]
offset_left = -95.7143
offset_top = 7.14286
offset_right = 102.286
offset_bottom = 73.1429
text = "10 / 1000"
label_settings = SubResource("LabelSettings_0g8g5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndMarker" type="Marker2D" parent="TopMenu/Bar"]
position = Vector2(260, 40)

[connection signal="pressed" from="MainMenu/StartMenu/DevelopmentalButton/TouchScreenButton" to="MainMenu" method="DevelopmentalButtonPressed"]
